--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.1",
-    "react-navigation-drawer": "^2.5.1",
-    "react-navigation-stack": "^2.8.3"
+    "react-native-web": "^0.13.18",
+    "react-navigation": "^4.4.2",
+    "react-navigation-drawer": "^2.5.2",
+    "react-navigation-stack": "^2.8.4",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@react-native-community/async-storage": "^1.12.1",
-    "@react-navigation/drawer": "^5.9.2",
+    "@react-navigation/drawer": "^5.9.3",
     "react-native-vector-icons": "^7.1.0"
   },
   "private": true
